// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchScreen match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#5c5c5c",
          "fontFamily": "Manrope",
          "fontSize": 23,
          "fontWeight": "800",
          "letterSpacing": 0,
          "lineHeight": 32,
          "textTransform": undefined,
        }
      }
    >
      Want to eat
healthy Food?
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": "100%",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#00000021",
            "width": 35,
          },
          {
            "height": 35,
          },
          undefined,
        ]
      }
      testID="question-icon"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/question.png",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#fff3f1",
        "borderRadius": 15,
        "height": 46,
        "marginHorizontal": 16,
        "marginTop": 14,
        "position": "relative",
      }
    }
    testID="search-input"
  >
    <View
      style={
        {
          "left": 21,
          "position": "absolute",
          "top": "50%",
          "transform": [
            {
              "translateY": -10,
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-search.png",
          }
        }
      />
    </View>
    <TextInput
      autoFocus={false}
      defaultValue=""
      onChangeText={[Function]}
      placeholder="Search for healthy food"
      placeholderTextColor="#ff8473"
      style={
        {
          "color": "#000000",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingHorizontal": 60,
          "paddingVertical": 14,
        }
      }
    />
  </View>
  <View
    style={
      {
        "height": 26,
        "marginTop": 16,
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      contentContainerStyle={
        {
          "gap": 16,
        }
      }
      handlerTag={1}
      handlerType="NativeViewGestureHandler"
      horizontal={true}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      pagingEnabled={true}
      showsHorizontalScrollIndicator={false}
      waitFor={
        [
          {
            "current": null,
          },
        ]
      }
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Breakfast
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Dinner
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Dry fruits
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Lunch
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Vegetables
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Greenish
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Non-Veg
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 16,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Fast Food
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "width": "100%",
          "zIndex": 10,
        },
        {
          "marginTop": undefined,
        },
      ]
    }
    testID="loading-indicator"
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/images/logo.png",
          }
        }
        style={
          {
            "height": 122,
            "width": 122,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`SearchScreen match snapshot 2`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#5c5c5c",
          "fontFamily": "Manrope",
          "fontSize": 23,
          "fontWeight": "800",
          "letterSpacing": 0,
          "lineHeight": 32,
          "textTransform": undefined,
        }
      }
    >
      Want to eat
healthy Food?
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": "100%",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#00000021",
            "width": 35,
          },
          {
            "height": 35,
          },
          undefined,
        ]
      }
      testID="question-icon"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/question.png",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#fff3f1",
        "borderRadius": 15,
        "height": 46,
        "marginHorizontal": 16,
        "marginTop": 14,
        "position": "relative",
      }
    }
    testID="search-input"
  >
    <View
      style={
        {
          "left": 21,
          "position": "absolute",
          "top": "50%",
          "transform": [
            {
              "translateY": -10,
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-search.png",
          }
        }
      />
    </View>
    <TextInput
      autoFocus={true}
      defaultValue=""
      onChangeText={[Function]}
      placeholder="Search for healthy food"
      placeholderTextColor="#ff8473"
      style={
        {
          "color": "#000000",
          "fontSize": 13,
          "fontWeight": "400",
          "paddingHorizontal": 60,
          "paddingVertical": 14,
        }
      }
    />
  </View>
  <View
    style={
      {
        "height": 26,
        "marginTop": 16,
      }
    }
  >
    <RCTScrollView
      collapsable={false}
      contentContainerStyle={
        {
          "gap": 16,
        }
      }
      handlerTag={2}
      handlerType="NativeViewGestureHandler"
      horizontal={true}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      pagingEnabled={true}
      showsHorizontalScrollIndicator={false}
      waitFor={
        [
          {
            "current": null,
          },
        ]
      }
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Breakfast
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Dinner
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Dry fruits
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Lunch
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Vegetables
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Greenish
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 0,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Non-Veg
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ececec",
              "borderRadius": 8,
              "justifyContent": "center",
              "marginLeft": 0,
              "marginRight": 16,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 4,
            }
          }
          testID="category-item"
        >
          <Text
            style={
              {
                "color": "#5c5c5c",
                "fontFamily": "Manrope",
                "fontSize": 13,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 18,
                "textTransform": undefined,
              }
            }
          >
            Fast Food
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "width": "100%",
          "zIndex": 10,
        },
        {
          "marginTop": undefined,
        },
      ]
    }
    testID="loading-indicator"
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/images/logo.png",
          }
        }
        style={
          {
            "height": 122,
            "width": 122,
          }
        }
      />
    </View>
  </View>
</View>
`;
